# RekSTI_Kelompok05_GatekeeperAI

./: .codex-web-dev.err  .dockerignore  .env.example  .gitignore  FACE_RECOGNITION_SETUP.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: deploy-vps.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/device-console/: README.md
apps/mobile/: App.tsx  ONBOARDING.md  api-client.ts  app.json  package.json  tsconfig.json
apps/mobile/screens/: ClassesMahasiswa.tsx  HomeScreen.tsx  HomeScreenDosen.tsx  HomeScreenMahasiswa.tsx  LoadingScreen.tsx  LoginScreen.tsx  NotificationScreen.tsx  OnboardingScreen.tsx  ProfileMahasiswa.tsx  ProfileScreen.tsx  RegisterScreen.tsx  SplashScreen.tsx
apps/mobile/utils/: onboarding.ts
apps/web/: package.json  styled-jsx.d.ts  tsconfig.json  tsconfig.tsbuildinfo
gatekeeper/: gatekeeper.ino  gatekeeper_with_camera.ino
infra/database/: README.md  schema.prisma  seed.mjs
infra/deployment/: .env.vps.example  README.md
infra/docker/: docker-compose.vps.yml  docker-compose.yml
infra/nginx/: api.vps.conf  default.conf
scripts/: README.md  dev-stack.mjs  dev-utils.mjs  start-api-dev.mjs  start-face-recognition.mjs
services/attendance-engine/: package.json
services/face-recognition/: Dockerfile  INTEGRATION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt
services/face-recognition/app/: main.py
services/face-recognition/models/: labels.txt  model.tflite
services/iot-gateway/: package.json
(+119 files in other folders)
