[project]
name = "gatekeeper-face-recognition"
version = "0.1.0"
description = "Face recognition service for Gatekeeper AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "tensorflow>=2.14.0",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
  "python-multipart>=0.0.6",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

